services/gitlab-ce/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: gitlab
spec:
  selector:
    app: gitlab
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
